[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/art/sprites/almost_heroic/AH_SpriteSheet_People1.png" type="Texture" id=1]
[ext_resource path="res://scenes/prefabs/actors/Npc/Npc.gd" type="Script" id=2]
[ext_resource path="res://scenes/prefabs/gui/Dialogue.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 40.0

[node name="Npc" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
vframes = 4
hframes = 3
frame = 4
region_enabled = true
region_rect = Rect2( 144, 0, 48, 64 )

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue" parent="CanvasLayer" instance=ExtResource( 3 )]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="dialogue_over" from="CanvasLayer/Dialogue" to="." method="_on_Dialogue_dialogue_over"]
